Added find movie by title service

--- a/TmdbAppApi.csproj
+++ b/TmdbAppApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>fd7a6243-e6ea-4c87-830a-aa9765d44b29</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
